[package]
name = "kibo"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
blake3 = "1.5"
rayon = "1.8"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.10"
glob = "0.3"
zstd = "0.13"
indicatif = "0.17"
atty = "0.2"
filetime = "0.2"

[dev-dependencies]
tempfile = "3.10"
